[package]
name = "simt_cuda"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "part of simt. cuda backend"
authors = ["Mack Straight <mack@str.rs>"]
repository = "https://github.com/eiz/simt"

[dependencies]
half = "2.3.1"
simt_core = { version = "0.2", path = "../simt_core" }
simt_cuda_sys = { version = "0.2", path = "../simt_cuda_sys" }
thiserror = "1"
