[package]
name = "simt_hip"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "part of simt. amd rocm/hip backend"
authors = ["Mack Straight <mack@str.rs>"]
repository = "https://github.com/eiz/simt"

[dependencies]
half = "2.3.1"
simt_core = { version = "0.2", path = "../simt_core" }
simt_hip_sys = { version = "0.2", path = "../simt_hip_sys" }
thiserror = "1"
